--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ img{
     position: absolute;
     right: 90px;
     bottom: 0;
-  background: url(img/shape.png);
+  background: url(https://i.ibb.co/N2qGD6w/shape.png);
   height: 200px;
   width: 200px;
   background-size: contain;
